test/spec/func-local-after-body.fail.txt
;;; ERROR: 1
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/func-local-after-body.fail.wast
(;; STDERR ;;;
Error running "wast2wasm":
out/third_party/testsuite/func-local-after-body.fail.wast:1:22: syntax error, unexpected LOCAL
(module (func (nop) (local i32)))
                     ^^^^^
;;; STDERR ;;)
